--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -66,7 +66,7 @@ p{
 }
 .BigHeading{
     margin-left: 7%;
-    font-size: 50px;
+    font-size: 80px;
     font-weight: bold;
     color:white;
 }
@@ -136,6 +136,7 @@ p{
     padding-top: 5%;
     margin-top: 5%;
     padding-bottom:0px ;
+margin-right: 0px;
     
 }
 .computer{
