--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -66,7 +66,7 @@ p{
 }
 .BigHeading{
     margin-left: 7%;
-margin-right: 5px;
+margin-right: 7px;
     font-size: 80px;
     font-weight: bold;
     color:white;
@@ -279,8 +279,15 @@ margin-right: 5px;
         } 
 
 @media screen and (max-width:991px)
-{   .BigHeading {
-Font-size : 40px;
+{   
+.SmallHeading{
+    
+    font-size:20px ;
+}
+    
+
+.BigHeading {
+Font-size : 50px;
 }
     .profilepic{
         width:50% ;
