--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -323,6 +323,7 @@ font-size : 50px;
     }
     #skill1{
         text-align: center;
+margin-right:0px;
     }
     .computer{
         width:60% ;
